@@ -3,6 +3,11 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+
+2007/04/07
+	* Capped clif_heal's heal field (the argument received is int, but the
+	  packet field is short, meaning that if the heal is high enough, the client
+	  would receive a negative heal amount). [Skotlex]
 2007/04/06
 	* Made a crazy attempt to at least partially synchronize login&char code
 	* Major edit to the way the servers handle ip addresses, making them obey
